# quarter

./: Basic_8h_source.html  CMakeLists.txt.TMP  DragDropHandler_8h_source.html  EventFilter_8h_source.html  FocusHandler_8h_source.html  InputDevice_8h_source.html  Keyboard_8h_source.html  Mouse_8h_source.html  QuarterWidgetPlugin.html  QuarterWidgetPlugin_8h_source.html  QuarterWidget_8h_source.html  Quarter_8h_source.html  annotated.html  classQDesignerCustomWidgetInterface.html  classQGLWidget.html  classQObject.html  classSIM_1_1Coin3D_1_1Quarter_1_1DragDropHandler-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1DragDropHandler.html  classSIM_1_1Coin3D_1_1Quarter_1_1EventFilter-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1EventFilter.html  classSIM_1_1Coin3D_1_1Quarter_1_1FocusHandler-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1FocusHandler.html  classSIM_1_1Coin3D_1_1Quarter_1_1InputDevice-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1InputDevice.html  classSIM_1_1Coin3D_1_1Quarter_1_1Keyboard-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1Keyboard.html  classSIM_1_1Coin3D_1_1Quarter_1_1Mouse-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1Mouse.html  classSIM_1_1Coin3D_1_1Quarter_1_1QtDesigner_1_1QuarterWidgetPlugin-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1QtDesigner_1_1QuarterWidgetPlugin.html  classSIM_1_1Coin3D_1_1Quarter_1_1QuarterWidget-members.html  classSIM_1_1Coin3D_1_1Quarter_1_1QuarterWidget.html  classes.html  dir_54f4dd81b4ad17b81b6172ef019374fd.html  dir_654fb29b637e4553ef76914ed15b1d1c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7020b8b7abcceffa3f9f7a2d24718f16.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e544200e18f237824d76495737e18b4c.html  dir_e931c1a3f0014e624d0645a271726ad2.html  (+15 more)
include/Quarter/: QuarterWidget.h
src/Quarter/: CMakeLists.txt  DragDropHandler.cpp  QuarterWidget.cpp  QuarterWidgetP.cpp  QuarterWidgetP.h
src/examples/: CMakeLists.txt  MdiMainWindow.cpp  MdiMainWindow.h  MdiQuarterWidget.cpp  MdiQuarterWidget.h
src/plugins/: QuarterWidgetPlugin.cpp
